--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
             
         </h2>
         <div>
-          <a href="https://mmoghal.github.io/understood_party/">
-            <img src="./assets/images/digital-marketing-meeting.jpg" alt="Application 1">
+          <a href="https://mmoghal.github.io/fast-door/">
+            <img src="./assets/images/landing_page2.png" alt="Application 1">
           </a>
-          <a href="path/to/application/2">
-            <img src="path/to/application/2/image" alt="Application 2">
+          <a href="https://mmoghal.github.io/understood_party/">
+            <img src="./assets/images/digital-marketing-meeting.jpg" alt="Application 2">
           </a>
           <a href="path/to/application/3">
             <img src="path/to/application/3/image" alt="Application 3">
